--- a/Capio/app/src/main/res/layout/gesprek.xml
+++ b/Capio/app/src/main/res/layout/gesprek.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/orange"
+    android:background="@android:color/holo_orange_dark"
     android:weightSum="1"
     android:baselineAligned="false"
     android:orientation="vertical">
