--- a/Capio/app/src/main/res/layout/activity_inlog.xml
+++ b/Capio/app/src/main/res/layout/activity_inlog.xml
@@ -66,7 +66,7 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:orientation="horizontal"
-            android:id="@+id/TextViewInloggen">
+            android:id="@+id/TextViewInloggen1">
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
